--- a/public/pages/book.html
+++ b/public/pages/book.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
 <head>
     <script src="book.js"></script>
 </head>
+
 <body>
     <header>
         <div>
@@ -10,5 +12,18 @@
             <div><a href="./movie.html">Movies</a></div>
         </div>
     </header>
+    <div class="table-div">
+        <table>
+            <thead>
+                <tr>
+                    <th>File Name</th>
+                    <th>Type</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </body>
+
 </html>
