Started adding expand-collapse fnality. Added music player for songs page

--- a/public/pages/book.html
+++ b/public/pages/book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <script src="book.js"></script>
+    <script type="module" src="book.js"></script>
 </head>
 
 <body>
