--- a/public/pages/song.html
+++ b/public/pages/song.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
 <head>
-    <script src="song.js"></script>
+    <script type="module" src="song.js"></script>
 </head>
+
 <body>
     <header>
         <div>
@@ -10,5 +12,24 @@
             <div><a href="./movie.html">Movies</a></div>
         </div>
     </header>
+    <div class="table-div">
+        <table>
+            <thead>
+                <tr>
+                    <th>File Name</th>
+                    <th>Type</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+    <div class="player-div hidden">
+        <audio controls>
+            <!-- <source src="./../../../../../../../Downloads/nobackup/songs/04. Kun Faya Kun.mp3" type="audio/mpeg"> -->
+            <!-- Your browser does not support the audio element. -->
+        </audio>
+    </div>
 </body>
+
 </html>
