--- a/public/pages/movie.html
+++ b/public/pages/movie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <script src="movie.js"></script>
+    <script type="module" src="movie.js"></script>
 </head>
 <body>
     <header>
@@ -10,5 +10,17 @@
             <div><a href="./movie.html">Movies</a></div>
         </div>
     </header>
+    <div class="table-div">
+        <table>
+            <thead>
+                <tr>
+                    <th>File Name</th>
+                    <th>Type</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </body>
 </html>
