All subdir can be expanded now

--- a/public/pages/movie.html
+++ b/public/pages/movie.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script type="module" src="movie.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
