--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script type="module" src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -10,5 +11,9 @@
             <div><a href="./movie.html">Movies</a></div>
         </div>
     </header>
+    <form action="/upload" method="POST" enctype="application/x-www-form-urlencoded">
+        <input type="file" id="myFile" name="filename" multiple>
+        <input type="submit">
+      </form>
 </body>
 </html>
